Closed Bug 1056172 Opened 10 years ago Closed 10 years ago

the recording-window-ended notification isn't reliably fired

Categories

(Core :: WebRTC: Audio/Video, defect)

defect
Not set
normal
Points:
2

Tracking

()

RESOLVED FIXED
mozilla34
Iteration:
34.3
Tracking Status
firefox33 --- fixed
firefox34 --- fixed

People

(Reporter: florian, Assigned: florian)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
I know at least 2 cases where the recording-window-ended notification is annoyingly not fired when I think it should:
- when the user clicks "Stop sharing" in the UI. (This is blocking me from making reasonable UI changes in bug 1050802).
- when an iframe is navigated away (very likely the cause of bug 1049810).

Looking at the media manager code reveals that both these cases go through the MediaManager::OnNavigation code path.
Attachment #8475993 - Flags: review?(rjesup)
Attachment #8475993 - Flags: review?(rjesup) → review+
Flags: qe-verify?
Flags: firefox-backlog+
Points: --- → 2
Flags: qe-verify? → qe-verify-
Try was green (except for an unrelated Windows failure from https://tbpl.mozilla.org/?tree=Mozilla-Inbound&rev=d25aeae7a346): https://tbpl.mozilla.org/?tree=Try&rev=40d248b42dac

https://hg.mozilla.org/integration/mozilla-inbound/rev/daa75e9e4f30
Assignee: nobody → florian
Status: NEW → ASSIGNED
We need to uplift this if we want to uplift bug 1050802.
Whiteboard: [screensharing-uplift]
Iteration: --- → 34.3
https://hg.mozilla.org/mozilla-central/rev/daa75e9e4f30
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Depends on: 1058650
Comment on attachment 8475993 [details] [diff] [review]
Patch

Approval Request Comment
[Feature/regressing bug #]: webrtc urlbar indicator. I don't think it's a regression.
[User impact if declined]:
direct user impact: navigating away of an iframe using getUserMedia will keep a stale sharing icon in the URL bar.
indirect user impact: uplifting this patch is required if we uplift bug 1050802.
[Describe test coverage new/current, TBPL]: covered by a test.
[Risks and why]: low risk, but we should uplift bug 1058650 (regression fix follow-up) at the same time.
[String/UUID change made/needed]: none.
Attachment #8475993 - Flags: approval-mozilla-aurora?
Attachment #8475993 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [screensharing-uplift]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: