Bug 1056172 - the recording-window-ended notification isn't reliably fired, r=jesup, a=sledru.